--- a/requirements.txt
+++ b/requirements.txt
@@ -3,23 +3,33 @@ beautifulsoup4==4.12.3
 certifi==2024.12.14
 cffi==1.17.1
 charset-normalizer==3.4.0
+docopt==0.6.2
+et_xmlfile==2.0.0
 h11==0.14.0
+hdfs==2.7.3
 idna==3.10
+numpy==2.2.1
+openpyxl==3.1.5
 outcome==1.3.0.post0
+pandas==2.2.3
 py4j==0.10.9.7
 pycparser==2.22
 PySocks==1.7.1
 pyspark==3.5.4
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.2
 requests==2.32.3
 selenium==4.27.1
 setuptools==75.6.0
+six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
 trio==0.27.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
+tzdata==2024.2
 urllib3==2.3.0
 websocket-client==1.8.0
 wheel==0.45.1
